1. vibe 全面升级 2. 增加任务和broker分组 3. 补充部分单侧